# python

./: .gitattributes  .gitignore  .gitmodules  .pylintrc  ChatGPT-Python process library ideas.md  README.md  chat_conversion_comparison.md  check_iterm_session.py  lib_miscDataTableFcns.py  lib_treeFcns.py  pyproject.toml  pytest.ini  requirements-min.txt  requirements.txt  restructure_chat_processing.sh  restructure_chat_processing_v2.sh  test_roundtrip_debug.py  update_chat_processing_tests.py
chat_pipeline/: README.md
data/: chat_history_schema_v1.1.yml  chat_history_schema_v1.2.yml  chat_history_schema_v1.3.yml  chat_index_schema.yml  chat_index_schema_v1.3.yml  example_chat_history.index.v1.3.yml  example_chat_history.v1.3.yml  extensions.csv  extensions.yml  extensions_schema.yml  gitignore
docs/: fsFind_flags.md
readmes/: ai_persona_model.md  compile_check_design.md  file_conventions.md
scripts/: README.md  chatConverter  chat_converter  dfa  doc_converter  ff  fileBackup  fsActions  fsFilters  fsFormat.py  fsa  gdir_install.sh  pyZip  pygit  pygit.py  pygrep  pygrep.py  rn  rpaTool  treeDir  treePrint.py
src/: README.md  __init__.py  calc_p.py  greptile.py  install_packages.sh  paste_as_symlink.py  test_array.sh
tests/: lib_miscDataTableFcns.py  lib_treeFcns.py  log.txt  pytest.ini  pytest_out.txt  sample_claude_chat.md  test_Fcn_DataFrames_Equal.py  test_Fcn_FindCircularDependencies.py  test_archive_utils.py  test_cli_smoke.py  test_compile_check.py  test_converter.py  test_dirFileActions.py  test_findFiles.py  test_fsfind_depth.py  test_gdir_cli.py  (+14 more)
(+464 files in other folders)
