[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdir"
version = "0.1.0"
description = "Keyword-driven directory jumper"
authors = [{ name = "PianoMan" }]
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
gdir = "gdir.cli:main"
